# deduce

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  base_config.json  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  format.yml  run-tests.yml  test.yml  tests.yml
data/lookup_lists/: first_name_exceptions.txt  first_names.txt  institutions.txt  interfix_surnames.txt  medical_terms.txt  municipalities.txt  prefixes.txt  regions.txt  residence_exceptions.txt  residences.txt  street_exceptions.txt  streets.txt  surname_exceptions.txt  surnames.txt  top_1000_terms.txt
data/lookup_lists/institutions/: institutions.txt
data/lookup_lists/locations/: municipalities.txt  placenames_long.py  placenames_long.txt  residence_exceptions.txt  residences.txt
data/lookup_lists/locations/residences/: residences_long.py
data/lookup_lists/names/: interfixes.txt
data/lookup_lists/streets/: street_exceptions.txt  streets_long.py  streets_manual.txt
deduce/: __init__.py  annotate.py  annotate_v2.py  annotation_processing.py  annotation_processor.py  annotator.py  backwards_compat.py  deduce.py  deduce_v2.py  depr.py  doc_processors.py  exception.py  listtrie.py  lookup_lists.py  lookup_lists_v2.py  lookup_sets.py  lookup_struct_loader.py  lookup_structs.py  name_patterns.py  person.py  processor_loader.py  redact.py  redactor.py  tokenize.py  tokenizer.py  try_wordlist_TEMP.py  utilcls.py  utility.py  utility_v2.py  utils.py
deduce-data/lookup_lists/: medical_terms.txt  top_1000_terms.txt
deduce-data/lookup_lists/institutions/: _institutions_old.txt  healthcare_institution_exceptions.txt  healthcare_institutions.txt  healthcare_institutions_long.py  hospital_abbr.txt  hospital_long.py  hospital_long.txt  hospitals.txt  institutions.txt  institutions_long.py  institutions_long.txt  ziekenhuis_abbr.txt  ziekenhuis_colloquial.txt  ziekenhuis_long.py  ziekenhuis_long.txt  ziekenhuizen.txt
deduce-data/lookup_lists/locations/: placenames_long.py
deduce-data/lookup_lists/locations/streets/: street_exceptions.txt  streets_bag.txt
deduce-data/lookup_lists/names/: first_name_exceptions.txt  first_names.txt  interfix_surname_exceptions.txt  interfix_surnames.txt  interfixes.txt  surname_exceptions.txt  surnames.txt
deduce/annotate/: annotate.py  annotation_processing.py  annotator.py  redact.py
deduce/data/: achternaam.lst  achternaammetvv.lst  instellingen.lst  interfixes.txt  medischeterm.lst  prefix.lst  stopwoord.lst  top1000.lst  top_1000_terms.txt  voornaam.lst  voorvoegsel.lst  woonplaats.lst
deduce/data/lookup/src/: __init__.py
deduce/data/lookup/src/institutions/lst_hospital/: items.txt
deduce/data/lookup/src/locations/lst_placename/: transform.json
deduce/data/lookup/src/locations/lst_street/: exceptions.txt  items.txt
deduce/data/lookup/src/names/lst_initial/: items.txt
deduce/data/lookup/src/names/lst_patient_environment/: items.txt
deduce/data/lookup/src/names/lst_specialisms/: items.txt
deduce/data/lookup/src/whitelist/lst_common_word/: exceptions.txt  extra_items.txt  items.txt
deduce/data/lookup/src/whitelist/lst_dictionary_names/: items.txt
deduce/data/lookup/src/whitelist/lst_eponymous_disease/: items.txt
deduce/data/lookup/src/whitelist/lst_verb_conjugations/: items.txt
deduce/data/lookup/src/whitelist/lst_verb_tenses/: items.txt
deduce/data/lookup_lists/src/: __init__.py
deduce/data/lookup_lists/src/institutions/lst_healthcare_institution/: healthcare_institutions_long.py  transform.json
deduce/data/lookup_lists/src/institutions/lst_hospital/: hospital_long.py  (+2 more)
deduce/data/lookup_lists/src/locations/: placenames_long.py
deduce/integrationtests/: test_structured_annotations.py  test_utility.py
deduce/lookup/: lookup_lists.py  lookup_sets.py  lookup_tries.py
deduce/pattern/: __init__.py  name.py  name_context.py  name_patient.py
deduce/patterns/: name.py  name_context.py
deduce/pipelinetests/: test_changes.py
deduce/process/: annotation_processing.py  annotator.py  redact.py
deduce/str/: __init__.py  processor.py
deduce/string/: processor.py
deduce/tokenize/: tokenizer.py
deduce/unittests/: test_annotate.py  test_deduce.py  test_tokenizer.py  test_utilcls.py  test_utility.py
docs/: conf.py  emojize.py
docs/source/: index.md  introduction.md  license.md  links.md  migrating.md  tutorial.md
docs/templates/: package.rst_t
tests/: conftest.py  helpers.py
tests/data/lookup/cache/: lookup_structs.pickle
tests/data/lookup/src/lst_test/: exceptions.txt
tests/data/regression_cases/: countries_and_nationalities.json  dates.json  emails.json  institutions.json  locations.json  names.json  names_patient_environment.json
tests/pipeline/: test_backwardscompat.py  test_booster_recall.py  test_deduce.py  test_lookupset_additions.py
tests/regression/: test_regr_base.py  test_regression.py
tests/regression/data/: ages.json  emails.json  identifiers.json  institutions.json  locations.json  names.json  phone_numbers.json  urls.json
tests/regression/data/lookup/src/: __init__.py
tests/unit/: paused_test_deduce_processors.py  test_annotation_proc.py  test_annotation_processor.py  test_annotator.py  test_annotators.py  test_deduce_processors.py  test_deduce_utils.py  test_lookup_struct.py  test_recall_booster_config.py  test_redact.py  test_tokenizer.py  test_utils.py
tests/unit/annotate/: test_annotation_proc.py  test_annotator.py  test_redact.py
tests/unit/pattern/: test_name.py  test_name_context.py  test_name_patient.py
tests/unit/process/: test_annotation_proc.py  test_annotator.py  test_redact.py
tests/unit/str/: test_str.py
tests/unit/tokenize/: test_tokenizer.py
tests/unittests/: test_annotate.py  test_deduce.py
(+70 files in other folders)
