[tool.poetry]
name = "deduce"
version = "2.5.0"
description = "Deduce: de-identification method for Dutch medical text"
authors = ["Vincent Menger <vmenger@protonmail.com>"]
maintainers = ["Vincent Menger <vmenger@protonmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/vmenger/deduce/"
keywords = ["de-identification", "clinical text", "dutch", "nlp"]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
]
include = ["deduce-data/lookup_lists/**/*", "config.json"]

[tool.sphinx]
author = "Vincent Menger"

[tool.poetry.dependencies]
python = "^3.9"
rapidfuzz = "^2.11.1"
docdeid = "0.1.10"
regex = "^2022.9.13"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
docformatter = "^1.5.0"
flake8 = "^5.0.4"
flake8-pyproject = "^1.2.3"
flake8-annotations = "^3.0.1"
pylint = "^3.0.1"

[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
sphinx = "^5.3.0"
myst-parser = "^0.18.1"
karma-sphinx-theme = "^0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
in-place = true
black = true
pre-summary-newline = true

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'ANN101', 'ANN102', 'ANN002', 'ANN003', 'DC100']
per-file-ignores = [
    '__init__.py:F401',
    'tests/*:ANN,DC',
]

[tool.pylint]
disable = ['C0114']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=deduce --cov-fail-under=85"
